--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.3.0",
-    "koa-router": "^7.2.1"
+    "koa-router": "^7.2.1",
+    "koa2-cors": "^2.0.6"
   },
   "devDependencies": {
     "react": "^15.6.1",
